@@ -132,7 +132,6 @@ CL_MUNMAP   dnl DEFS HAVE_MUNMAP
 CL_MSYNC    dnl DEFS HAVE_MSYNC
 CL_MPROTECT dnl DEFS HAVE_MPROTECT, HAVE_WORKING_MPROTECT
 CL_SHM      dnl DEFS HAVE_SHM if shm works
-CL_SHM_RMID dnl DEFS SHM_RMID_VALID
 CL_DYNLOAD  dnl DEFS HAVE_DLOPEN
 gl_FCNTL_O_FLAGS dnl DEFS HAVE_WORKING_O_NOFOLLOW & HAVE_WORKING_O_NOATIME
 dnl
